# london-bikes-data-engineering

./: .gitignore  Dockerfile  README.md  Untitled.ipynb  commads.md  docker-compose.yaml  main.py  profiles.yml  pyproject.toml  requirements.txt
data/curated/avg_trip_duration/: .part-00000-62dae397-dbc6-4bed-af89-45309b1cddf8-c000.snappy.parquet.crc  .part-00001-62dae397-dbc6-4bed-af89-45309b1cddf8-c000.snappy.parquet.crc  .part-00002-62dae397-dbc6-4bed-af89-45309b1cddf8-c000.snappy.parquet.crc  .part-00003-62dae397-dbc6-4bed-af89-45309b1cddf8-c000.snappy.parquet.crc  .part-00004-62dae397-dbc6-4bed-af89-45309b1cddf8-c000.snappy.parquet.crc  .part-00005-62dae397-dbc6-4bed-af89-45309b1cddf8-c000.snappy.parquet.crc
data/curated/popular_routes/: .part-00000-4c07efca-e59b-4cea-ac3e-d08ba1effe47-c000.snappy.parquet.crc  .part-00001-4c07efca-e59b-4cea-ac3e-d08ba1effe47-c000.snappy.parquet.crc  (+36 more)
data_loader/dags/: airflow_pipeline.py
data_loader/scripts/: check_parquet_schema.py  clean_schema_convert_to_parquet.py  clean_schema_normalisation.py  convert_to_parquet.py  extract_tfl_data.py  polars_bronze_to_silver_standardizer.py  upload_to_gcs.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: schema.yml
models/marts/: fact_monthly_trips.sql
models/staging/: stg_trips.sql
spark/: spark_bronze_to_gold_unified_pipeline.py  transform_trips.py
spark/archive/: cloud_transform_script.py  gemini_local.py  local_transform_trips.py  transform_gcs.py
terraform/: main.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
(+10551 files in other folders)
