[project]
name = "london-bikes-data-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "apache-airflow==2.9.3",
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "google-cloud-bigquery==3.25.0",
    "google-cloud-storage==2.16.0",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "pyarrow==15.0.2",
    "pyspark==3.5.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
